--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
     "vite": "^5.4.19",
-    "vue-tsc": "^3.0.5"
+    "vue-tsc": "^2.2.12",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.12.5",
+    "@vitejs/plugin-vue-jsx": "^3.1.0"
   }
 }
