--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "element-plus": "2.7.2",
-    "vue": "^3.5.18"
+    "error-stack-parser": "2.1.4",
+    "source-map": "^0.7.6",
+    "source-map-js": "^1.2.1",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "vite": "^5.4.19",
-    "vue-tsc": "^2.2.12",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
-    "@vitejs/plugin-vue-jsx": "^3.1.0"
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/tsconfig": "^0.7.0",
+    "typescript": "~5.8.3",
+    "vite": "^5.4.19",
+    "vue-tsc": "^2.2.12"
   }
 }
